Fixed navbar and content overflow

--- a/src/index.css
+++ b/src/index.css
@@ -37,16 +37,8 @@
 }
 @layer components {
     .gallery-container {
-        @apply flex flex-col md:flex-row
-        justify-center
-        items-center 
-        bg-transparent
-        text-black
+        @apply 
         mt-20
-        h-[calc(100vh-80px)]
-        w-full  
-        px-5
-        
     }
 }
 
@@ -54,7 +46,6 @@
     body {
         @apply
         bg-gradient-to-t from-zinc-700 via-gray-300 to-gray-300
-        h-full
     }
 }
 
